2018-09-23         Steven Packard        <spackard1@bloomberg.net>

	* awk.h: Add `#if !defined(__SUNPRO_C)' around check for non-ANSI
	compilers.  Needed for some Solaris systems.

2018-09-21         Arnold D. Robbins     <arnold@skeeve.com>

	* re.c (make_regexp): Handle backslash at end of
	input string. Thanks to Anatoly Trosinenko
	<anatoly.trosinenko@gmail.com> for the report.
	Also, improve the error message when compilation of
	the regexp fails.

2018-09-21         Arnold D. Robbins     <arnold@skeeve.com>

	* io.c (fork_and_open_slave_pty): Move an errant close brace
	inside the #endif so that gawk will compile on AIX. Thanks to
	Fredrik Laurin <fredrik_laurin@yahoo.se> for the report.

2018-09-18         Arnold D. Robbins     <arnold@skeeve.com>

	* NEWS: Fix typo in gettext version.

	Unrelated:

	* field.c (get_field): Move lint check for field access in an
	END rule to top level, make wording more general.
	* builtin.c (do_print_rec): Restore check before calling get_field()
	and add do_lint to the condition.

	Unrelated:

	* field.c (set_NF): Add lint warning if decrementing NF, which
	doesn't work on older Unix awks.

	Unrelated:

	* config.rpath: Sync to GNULIB.

2018-09-16  gettextize  <bug-gnu-gettext@gnu.org>

	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.19.8.
	* ABOUT-NLS, config.rpath: Updated by gettext 0.19.8.1.

2018-09-16         Arnold D. Robbins     <arnold@skeeve.com>

	* field.c (get_field): Add lint check if accessing $0 inside
	and END rule, print a "may not be portable" warning.
	* builtin.c (do_print_rec): Call get_field() unconditionally
	in order to do lint check.

	Unrelated:

	* awkgram.c, command.c: Updated to Bison 3.1.
	* NEWS: Updated.

	Unrelated:

	* Makefile.in, aclocal.m4, configure: Regenerated, using
	Automake 1.16.1.

	Unrelated:

	* gettext.h: Synced with that from Gettext 0.19.8.1.

2018-09-14         Adrian Bunk           <bunk@debian.org>

	* awk.h (init_debug, debug_prog): Move prototypes to here from ...